// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render external link 1`] = `
<DocumentFragment>
  <a
    class="bgm-link d_inline-block c_#0084b4 cursor_pointer [&:link,_&:visited,_&:active]:td_none hover:c_#02a3fb hover:td_underline"
    href="https://test.com"
  />
</DocumentFragment>
`;

exports[`should render internal link 1`] = `
<DocumentFragment>
  <a
    class="bgm-link d_inline-block c_#0084b4 cursor_pointer [&:link,_&:visited,_&:active]:td_none hover:c_#02a3fb hover:td_underline"
    data-discover="true"
    href="/a"
  />
</DocumentFragment>
`;

exports[`should render no-style link 1`] = `
<DocumentFragment>
  <a
    data-discover="true"
    href="/a"
  />
</DocumentFragment>
`;
